# filler

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  METHODOLOGY.md  Makefile  README.md  polymerge-report-makefile-validate.md  run_game.sh  skills-lock.json
.agents/rules/: methodology.md
.agents/skills/karpathy-guidelines/: SKILL.md
.github/: copilot-instructions.md
benches/: turn_benchmark.rs
docs/: audit_guide.md
docs/plan/: deeppro.md  gem.md  glm.md  implementation_tracker.md
docs/report/: cross-plan-enrichments.md  final-cross-plan-enrichments.md  gem_report.md
e2e/: assert_winrate.rs  run_audit_suite.sh
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-18/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/2026-06-27/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
scripts/: q1_audit.sh  q1_simple.sh
src/: lib.rs  main.rs  output.rs  parser.rs  strategy.rs  types.rs  validator.rs  visualizer.rs
tests/: e2e.rs  integration_tests.rs  multi_turn.rs  parser_tests.rs  strategy_tests.rs  validator_tests.rs
tests/common/: mod.rs
